@@ -13,7 +13,7 @@ Include .................: networks/roxnet.network
 #
 # What K:Line address can K:lined users mail at?
 #
-Set KLINE_ADDRESS .......: lame.admin.nee@t.com
+Set KLINE_ADDRESS .......: unreal-dev@lists.sourceforge.net
 
 # If you want users to get auto +x on connect
 # 1 = Yes 0 = No
